# DADA

./: pyproject.toml  test_custom.ipynb
data_provider/: data_provider.py
dataset/evaluation_dataset/: DETECT_META.csv
exp/: exp_DADA.py
scripts/: DADA.sh
scripts/CUSTOM/: DADA.sh
